Enhance weather app UI and functionality
- Updated index.html to include headings and value placeholders for rainfall and PM2.5 data.
- Improved script.js to fetch and display real-time rainfall and PM2.5 data from APIs.
- Modified styles.css to adjust styling for the short-term forecast section.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,25 @@
     <main>
         <div class="data">
             <div class="RFandPM25">
-                <div class="rainfall"></div>
-                <div class="pm25"></div>
+                <div class="rainfall">
+                    <h2>Rainfall</h2>
+                    <p id="rainfall-value"></p>
+                </div>
+                <div class="pm25">
+                    <h2>PM2.5 (West)</h2>
+                    <p id="pm25-value"></p>
+                </div>
             </div>
             <div class="forecast">
-                <div class="twentyfour"></div>
-                <div class="next4"></div>
+                <div class="shortTermForecast">
+                    <h2>Next 2 and 24 Hours</h2>
+                    <p id="two-hour-forecast"></p>
+                    <p id="next-24-hours"></p>
+                </div>
+                <div class="next4">
+                    <h2>Next 4 Days</h2>
+                    <ul id="forecast-list"></ul>
+                </div>
             </div>
         </div>
     </main>
