Refactor weather app layout and improve data display

--- a/index.html
+++ b/index.html
@@ -28,19 +28,26 @@
                     <p id="rainfall-value"></p>
                 </div>
                 <div class="pm25">
-                    <h2>PM2.5 (West)</h2>
+                    <h2>PM2.5</h2>
                     <p id="pm25-value"></p>
                 </div>
             </div>
             <div class="forecast">
                 <div class="shortTermForecast">
                     <h2>Next 2 and 24 Hours</h2>
+                    <div class="shortTermOutlook">
                     <p id="two-hour-forecast"></p>
                     <p id="next-24-hours"></p>
+                    </div>
                 </div>
                 <div class="next4">
                     <h2>Next 4 Days</h2>
-                    <ul id="forecast-list"></ul>
+                    <div class="next4-content">
+                        <p id="d1" class="forecast-day"></p>
+                        <p id="d2" class="forecast-day"></p>
+                        <p id="d3" class="forecast-day"></p>
+                        <p id="d4" class="forecast-day"></p>
+                    </div>
                 </div>
             </div>
         </div>
