Add rainfall and PM2.5 band descriptors with updated UI elements

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
             <div class="RFandPM25">
                 <div class="rainfall">
                     <h2>Rainfall</h2>
-                    <p id="rainfall-value"></p>
+                    <p class="rainfall-value"><span id="rainfall-number"></span> <span id="rainfall-unit">mm</span></p>
+                    <p class="rainfall-value" id="rainfall-band"></p>
                 </div>
                 <div class="pm25">
                     <h2>PM2.5</h2>
-                    <p id="pm25-value"></p>
+                    <p class="pm25-value"><span id="pm25-number"></span> <span id="pm25-unit">µg/m³</span></p>
+                    <p class="pm25-value" id="pm25-band"></p>
                 </div>
             </div>
             <div class="forecast">
