--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="webName">
             <img src="images/cloud-icon.png" alt="Cloud icon">
-            <h1>Hendrik's Weather App</h1>
+            <h1>Bukit Panjang Weather Forecast</h1>
         </div>
         <a href="https://github.com/hendriky12" target="_blank" rel="noopener noreferrer">
             <img src="images/github-mark-white.png" alt="GitHub icon" class="githubIcon">
